Deployment/kubernetes/overlays/devops/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    name: devops
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
